# vision-flow

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_IT.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/api/: app.py  deps.py
src/api/routes/: analysis.py  config.py  video.py
src/api/static/: manifest.json  sw.js
src/api/templates/: index.html
src/config/: settings.py
src/core/: base_model.py  circuit_breaker.py  engine.py  notifier.py  storage.py
src/inference/: yolo_detector.py
src/stream/: manager.py
src/vlm/: visual_expert.py
tests/: conftest.py  test_api.py  test_core.py  test_metrics.py  test_storage.py  test_stream.py  test_validators.py
