[project]
name = "visionflow"
version = "1.0.0"
description = "Real-time multimodal intelligent monitoring system"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Giuseppe Gerardo Bifulco" }]
dependencies = [
    "ultralytics>=8.3.0,<9.0.0",
    "opencv-python>=4.10.0,<5.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.32.0,<1.0.0",
    "python-multipart>=0.0.12,<1.0.0",
    "pillow>=11.0.0,<12.0.0",
    "groq>=0.13.0,<1.0.0",
    "google-genai>=1.0.0,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "requests>=2.32.0,<3.0.0",
    "slowapi>=0.1.9,<1.0.0",
    "tenacity>=9.0.0,<10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "httpx>=0.28.0,<1.0.0",
    "ruff>=0.8.0,<1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
